// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SoundCloud Track Block should render Default 1`] = `
<DocumentFragment>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
      style="width: auto; height: auto;"
    >
      <iframe
        allow="autoplay"
        frameborder="0"
        src="https://w.soundcloud.com/player/?url=https%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F744469711"
        style="width: 100%; height: 100%;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`SoundCloud Track Block should render WithClassName 1`] = `
<DocumentFragment>
  <div
    class="extra-classname emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
      style="width: auto; height: auto;"
    >
      <iframe
        allow="autoplay"
        frameborder="0"
        src="https://w.soundcloud.com/player/?url=https%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F744469711"
        style="width: 100%; height: 100%;"
      />
    </div>
  </div>
</DocumentFragment>
`;
